# audio-anomaly-detection-structural-testing

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  README_SNIPPETS.md  REPO_PREPARATION_REPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
configs/: default.yaml
docs/: code_audit.md  confidentiality_statement.md  dataset.md  github_setup.md  method_notes.md  migration_notes.md  new_data_workflow.md  paper_summary.md  reproducibility.md
examples/: quickstart.py
models/: MODEL_CARD.md  README.md
scripts/: benchmark_inference.py  check_dataset.py  download_data.py  evaluate_feature_map_classifier.py  evaluate_reconstruction_baselines.py  inspect_h5_model.py  predict_new_audio.py  prepare_new_audio.py  prepare_raw_audio_dataset.py  train_cae.py
src/audio_anomaly/: __init__.py  audio.py  classifiers.py  data.py  evaluation.py  feature_maps.py  metrics.py  model.py  plotting.py
tests/: test_audio_windows.py  test_classifiers.py  test_data_contract.py  test_feature_map_pipeline.py  test_metrics.py
