[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-anomaly-detection-structural-testing"
version = "0.1.0"
description = "Research-software workflow for audio-based anomaly detection in large-scale structural testing using WST features and CAE feature maps."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Sergio Lopez Dubon" }
]
keywords = [
  "anomaly detection",
  "audio",
  "wavelet scattering transform",
  "convolutional autoencoder",
  "structural testing",
  "FastBlade",
  "research software",
  "scientific machine learning"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "joblib>=1.3",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
deep-learning = [
  "tensorflow>=2.13,<2.16",
]
wst = [
  "kymatio>=0.3",
  "scipy>=1.10",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.8",
  "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
